--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </table>
 
         <p class="link-container">
-            <a href="https://github.com" target="_blank">Visite o GitHub, uma ferramenta que uso para meus projetos</a>
+            <a href="https://github.com/jfelipnasc/" target="_blank">Visite o GitHub, uma ferramenta que uso para meus projetos</a>
         </p>
     </main>
 
